--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,81 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Lilita+One&family=Playwrite+MX:wght@100..400&display=swap');
 
-.container {
-  display: flex;
+.h1{
+  font-family: 'anton';
 }
-
-.container div {
-  flex: 1 1 auto;
-}
-
-
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-
-  .switch {
-    position: relative;
-    display: inline-block;
-    width: 50px;
-    height: 24px;
-  }
-
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #111;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 16px;
-    width: 16px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background-color: rgb(29, 128, 210);
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px rgb(29, 128, 210);
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
-  
-  .row {
-    margin: 10px;
-    display: flex;
-
-  }
-  .col {
-    margin: 2px;
-  }
 
   #blogForm{
     
@@ -99,4 +26,13 @@ li {
 
 .left{
   padding-bottom: 7%;
+}
+
+#save {
+  background-color: #883ed8;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
 }
