--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,10 @@ body {
     color: #333;
 }
 
+.h2{
+  border-bottom: 2px solid #111;
+}
+
 body.dark-mode {
     /* Dark mode styles */
     background-color: #333;
@@ -27,10 +31,8 @@ body.dark-mode a {
     border-right: 10px double #fbf9ef;
   }
   
-  body.dark-mode  .card {
-    border: 2px solid #fbf9ef;
-  }
-  
+ 
+
   body.dark-mode  h1,
   body.dark-mode  {
     color: #fbf9ef;
@@ -40,8 +42,12 @@ body.dark-mode a {
     color: #fbf9ef;
   }
   
-  body.dark-mode .card h2 {
+  body.dark-mode h2 {
     border-bottom: 2px solid #fbf9ef;
+  }
+
+  .dark-mode {
+    color: white;
   }
 
 
